--- a/pages/aor.mdx
+++ b/pages/aor.mdx
@@ -7,3 +7,16 @@ The Ancients of Resonite is a group made by me (Realit.exe/DetectiveBot), Virgil
 
 ## Main Project
 Our main project is the [Cross-Session Stargate Network](/stargate_network). A system that allows you to dial from a stargate in one session to a stargate in a different one and seemlessly travel through.
+
+## Team
+- Reality.exe (AKA DetectiveBot)
+- Virgil
+- Climber
+- Aegis_Wolf
+
+## Public Folder
+You can find the public folder by pasting this in-game:
+
+`resrec:///G-1OK9tER6Yxk/R-4B220F3815F20ADAF82F8829709D52F61637E6713447DFA91D7B527301F64300`
+
+
