--- a/pages/aor.mdx
+++ b/pages/aor.mdx
@@ -2,7 +2,6 @@
 
 
 ## What is the Ancients of Resonite
-
 The Ancients of Resonite is a group made by me (Realit.exe/DetectiveBot), Virgil, and Climber dedicated to making technology from the [Stargate](https://en.wikipedia.org/wiki/Stargate) franchise.
 
 ## Main Project
@@ -19,4 +18,11 @@ You can find the public folder by pasting this in-game:
 
 `resrec:///G-1OK9tER6Yxk/R-4B220F3815F20ADAF82F8829709D52F61637E6713447DFA91D7B527301F64300`
 
+## Worlds
+- Abydos: The desert planet with three moons from Stargate, A massive pyramid in the middle of a vast desert.
+- Stargate Command: A top-secret military base situated 28 levels underground in the Cheyanne Mountain Complex.
+- Destiny: The Ancient research vessel launched hundreds of millions of years ago.
 
+## External Links
+- [AoR Discord](https://discord.gg/RtwD48gtGS)
+- [Stargate List](https://sgn.rxserver.net)
