Finish stargate_system.mdx

--- a/pages/aor/stargate_system.mdx
+++ b/pages/aor/stargate_system.mdx
@@ -1,4 +1,5 @@
-import { Callout } from 'nextra/components'
+import { Callout, Cards, Card } from 'nextra/components'
+import {} from '@phosphor-icons/react'
 
 # Resonite Stargate System
 The Resonite Stargate System is a set of specially designed devices allowing you to travel vast distances in a
@@ -37,7 +38,31 @@ The wormhole is unstable and risks the loss of travellers. This gate was also bu
     The Dawn Stargate is not finished therefor is not yet accessible. Keep an eye on the Discord server for further updates.
 </Callout>
 The Dawn stargate is a unique gate to Resonite. You can distinguish this gate very easily because of the chevrons that resemble the Resonite logo, the blue gradient on the outter ring,
-aswell as the extremely unique event horizon. This gate also doesnt have an unstable vortex (Also known as the "Kawoosh"). These gates will mostly be found in "Dawn" style worlds such as the
-default cloud home world.
+aswell as the extremely unique event horizon. This gate also doesnt have an unstable vortex (Also known as the "Kawoosh").
+These gates will mostly be found in "Dawn" style worlds such as the default cloud home world.
 
-## Dial Home Devices
+## Dialing Devices
+### Dial Home Device
+The Dial Home Device (Also known as the DHD) is a large circular pedastal with 36-38 buttons placed around a large center button.
+The glyphs on the buttons correspond to the gate type the DHD is bound with. You can also optionally enable a text overlay to make it easier to dial.
+
+### SGC Computer
+The Stargate Command (SGC) computer is Earth's way of dialing the gate. It also has extra information on other screens such as an "address book" that shows all active stargates, energy output,
+IDC monitoring, and a camera that shows the top chevron.
+
+### Ancient Remote
+The Ancient Remote is a handheld device primarily used to dial Universe type stargates however they can work with anything.
+They wirelessly link to a nearby gate and will list any other stargates in the same session. The remote cannot dial 8 or 9 chevron addresses therefor being locked to gates of the same type.
+
+The remote can also display information about the linked gate and its current dial state.
+
+It can also link to the Destiny starship when either in a user-hosted world or the dedicated headless session to display the FTL timer.
+
+### Destiny Console
+The Destiny console is functionally similar to the SGC computer. It has an address input and will show info about the connected stargate.
+
+<Cards>
+    <Card title="Ancients of Resonite" href="/aor" />
+    <Card title="Discord Server" href="https://discord.gg/RtwD48gtGS" />
+    <Card title="Stargate Setup" href="/aor/stargate_system/stargate_setup" />
+</Cards>
