--- a/pages/aor.mdx
+++ b/pages/aor.mdx
@@ -1,8 +1,9 @@
+import { Callout, Cards, Card } from 'nextra/components'
+
 # Ancients of Resonite
 
-
 ## What is the Ancients of Resonite
-The Ancients of Resonite is a group made by me (Realit.exe/DetectiveBot), Virgil, and Climber dedicated to making technology from the [Stargate](https://en.wikipedia.org/wiki/Stargate) franchise.
+The Ancients of Resonite is a group made by me (Reality.exe/DetectiveBot), Virgil, and Climber dedicated to making technology from the [Stargate](https://en.wikipedia.org/wiki/Stargate) television franchise.
 
 ## Main Project
 Our main project is the [Cross-Session Stargate Network](/stargate_network). A system that allows you to dial from a stargate in one session to a stargate in a different one and seemlessly travel through.
@@ -15,7 +16,6 @@ Our main project is the [Cross-Session Stargate Network](/stargate_network). A s
 
 ## Public Folder
 You can find the public folder by pasting this in-game:
-
 `resrec:///G-1OK9tER6Yxk/R-4B220F3815F20ADAF82F8829709D52F61637E6713447DFA91D7B527301F64300`
 
 ## Worlds
@@ -26,3 +26,8 @@ You can find the public folder by pasting this in-game:
 ## External Links
 - [AoR Discord](https://discord.gg/RtwD48gtGS)
 - [Stargate List](https://sgn.rxserver.net)
+
+<Cards>
+    <Card title="Discord Server" href="https://discord.gg/RtwD48gtGS" />
+    <Card title="Stargate System" href="/aor/stargate_system" />
+</Cards>
