Fix incorrect link

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,4 +10,4 @@ The Universe is simply the name of my entire server setup with everything named 
 
 ### Ancients of Resonite
 - [AoR Main Page](/aor)
-- [Cross Session Stargate Network](/stargate_network)
+- [Resonite Stargate System](/aor/stargate_system)
